# NCInput_gint

./: .gitignore  CMakeLists.txt  test_gint.c
.github/workflows/: build.yml  simulator.yml
refs/: cdateinput.py  ced_new.py.txt  cinput.py  cinput_demo.py.txt  physchem.py.txt
simulator/: CMakeLists.txt  build_web.sh  index.html  shell.html
simulator/include/gint/: bfile.h  clock.h  display.h  keyboard.h  rtc.h
simulator/src/: simulator.cpp
src/: cdateinput.cpp  cinput.cpp  cinput.hpp  cinput_utils.hpp  cpp_support.cpp  main.cpp
src/apps/app_template/: main.cpp
src/apps/ced/: editor.cpp  editor.hpp  main.cpp  tokenizer.cpp  tokenizer.hpp
src/apps/cinput_demo/: main.cpp
src/apps/cptime/: main.cpp
src/apps/fm/: fm.cpp  fm.hpp  main.cpp
src/apps/mcsbrowse/: main.cpp
src/apps/physchem/: main.cpp
src/shared/: LazyFile.cpp  LazyFile.hpp  cdateinput.cpp  cdateinput.hpp  cinput.cpp  cinput.hpp  mcs.cpp  mcs.hpp
